<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/UploadOptionsScroll"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">
		
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:id="@+id/UploadOptionsLayout"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:padding="5dp"
	  android:orientation="vertical">
	
		<TextView android:text="@string/lblphototitle"
				  android:id="@+id/lblPhotoTitle"
				  android:padding="4dp"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	    </TextView>
	
		<EditText android:text=""
				  android:id="@+id/txtPhotoTitle"
				  android:singleLine="true"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	  	</EditText>
	
		<TextView android:text="@string/lblcomment"
				  android:id="@+id/lblPhotoComment"
				  android:padding="4dp"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	    </TextView>
	
		<EditText android:text=""
				  android:id="@+id/txtPhotoComment"
				  android:lines="4"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	  	</EditText>
	
		<TextView android:text="@string/lblphototags"
				  android:id="@+id/lblPhotoTags"
				  android:padding="4dp"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	    </TextView>
	
		<EditText android:text=""
				  android:id="@+id/txtPhotoTags"
				  android:singleLine="true"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	  	</EditText>
	
		<TextView android:text="@string/lblvisibleto"
				  android:id="@+id/lblVisibleTo"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:padding="2dp"
				  android:layout_marginBottom="10dp"
				  android:gravity="center"
				  android:textColor="@android:color/white"
				  android:background="@android:color/darker_gray">
	    </TextView>
	
		<CheckBox android:text="@string/chkeveryone"
				  android:id="@+id/chkEveryone"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	  	</CheckBox>
	  	
		<CheckBox android:text="@string/chkfriends"
				  android:id="@+id/chkFriends"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	  	</CheckBox>
	  	
		<CheckBox android:text="@string/chkfamily"
				  android:id="@+id/chkFamily"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	  	</CheckBox>
	  	
		<TextView android:text="@string/lblsafetylevel"
				  android:id="@+id/lblSafetyLevel"
				  android:padding="4dp"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content">
	    </TextView>
	
		<Spinner android:id="@+id/spnSafetyLevel"
				 android:layout_width="fill_parent"
				 android:layout_height="wrap_content">
	 	</Spinner>

	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:id="@+id/UploadOptionsButtonLayout"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	  
		<Button android:text="@string/btnok"
				android:id="@+id/btnOK"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
		</Button>
		
		<Button android:text="@string/btncancellabel"
				android:id="@+id/btnCancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
		</Button>
		
	</LinearLayout>
	

</LinearLayout>

</ScrollView>